--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.8.0",
     "react-scripts": "^5.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
